some work on welcome section done

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 
 
     <section id="welcome-section">
-        <h1>Hello<br>I am Pavlina</h1>
+        <h1>Hello</h1>
+        <h1>I am Pavlina</h1>
+        <p>Trying to change my career at 46.</p>
+        <p>This is what I've accomplished so far</p>
 
     </section>
 
