--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
     <section id="welcome-section">
         <h1>Hello</h1>
-        <h1>I am Pavlina</h1>
-        <p>Trying to change my career at 46.</p>
-        <p>This is what I've accomplished so far</p>
+        <h1 id="animation">I am Pavlina</h1>
+        <p>trying to change my career at 46</p>
+        <p>this is what I've accomplished so far</p>
 
     </section>
 
