welcome message animation finished

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
     <section id="welcome-section">
         <h1>Hello</h1>
-        <h1 id="animation">I am Pavlina</h1>
-        <p>trying to change my career at 46</p>
-        <p>this is what I've accomplished so far</p>
+        <h1 id="IamPavlina">I am Pavlina</h1>
+        <p id="career">trying to change my career</p>
+        <p id="so-far">this is what I've accomplished so far</p>
 
     </section>
 
