--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
             <li><a class="nav-link" href="#Contacts">Contacts</a></li>
         </ul>
     </nav>
-
-
     <section id="welcome-section">
         <h1>Hello</h1>
         <h1 id="IamPavlina">I am Pavlina</h1>
         <p id="career">trying to change my career</p>
         <p id="so-far">this is what I've accomplished so far</p>
-
     </section>
 
     <section id="About">
+        <h2>About</h2>
+
 
     </section>
 
-    <section id="projects">
+    <section id="My_Projects">
+        <h2>My projects</h2>
         <div id="wrapper-div">
             <div class="project-tile">
                 <div class="project-name">FreeCodeCamp Project 1 - Tribute Page</div>
@@ -41,7 +41,7 @@
     </section>
 
     <section id="Contacts">
-        
+        <h2>Contacts</h2>
         <a id="profile-link" href="https://github.com/PavlinaPs" target="_blank">My GitHub page</a>
     </section>
 
